Fixed bg pic not showing up in quizzes

--- a/quizsets/quiz-style.css
+++ b/quizsets/quiz-style.css
@@ -462,7 +462,7 @@ body {
     top: 0;
     left: 0;
     z-index: 10;
-    background: url(../../images/quiz-assets/quiz-bg.png);
+    background: url(../images/quiz-assets/quiz-bg.png);
 }
 
 
